# Scraping

./: .gitignore  README.md
json_agregate/: Cargo.toml  reset.sh  starterxml.txt  submissions.json
json_agregate/src/: main.rs
scraper/: continuous_run.sh  mullvad_reload.sh  package-lock.json  package.json  page1.json  page2.json  page3.json  page4.json  page5.json  page6.json  page8.json  post.js  scrape.js  submitter.js
simple_scrape_script/: scrape.js
